added comment to Map HTML file

--- a/Map1.html
+++ b/Map1.html
@@ -43,7 +43,7 @@
                 .color.pink { background: pink; }
                 .color.green { background: green; }
             </style>
-        
+            <!╌ wanted to add a legend folium does not have legend function built in to the library - used css within HTML to create a legend ╌>
 </head>
 <body>    
     
